@@ -23,6 +23,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
     and command() is interepreted when it is undef
   * Add hook_fd to the 'hooks' export tag
   * Fixed a leak in XS_Xchat_get_list(Vincent Pit)
+  * Change Xchat::register so that scripts calling it without a name or
+    version will still show up in the plugins and scripts window.
 
 ------------------------------------------------------------------------------
  2.8.6 - 11/Jun/2008
